Fix z-index of publication graph labels
These should really be on top of everything, rather than underneath
everything, so give them a positive z-index (and just use an even larger
one for the labels that should be on top).

--- a/app/assets/stylesheets/_count_bars.css
+++ b/app/assets/stylesheets/_count_bars.css
@@ -56,6 +56,7 @@
   color: white;
   padding: 2px;
   visibility: hidden;
+  z-index: 2;
 }
 
 .count-bars-labels .label.show span {
@@ -64,5 +65,5 @@
 
 .count-bars-labels .label.always-show span {
   visibility: visible;
-  z-index: -1;
+  z-index: 1;
 }
